First Playbook 3rd edition

--- a/01_linux.yml
+++ b/01_linux.yml
@@ -9,8 +9,8 @@
         path: /root/testfile.txt
         state: touch
     mode: '0755'
-  
+
   - name: Add line in file
-    lineinfile:ansible.builtin.lineinfile:
-        path: /root/testfile.txt
-        line: Ansible was here...
+    ansible.builtin.lineinfile:
+      path: /root/testfile.txt
+      line: Ansible was here...
