--- a/01_vars.yml
+++ b/01_vars.yml
@@ -55,6 +55,9 @@
         permanent: true
         state: enabled
       notify: Firewall reload
+      tags:
+        - firewall
+        - config
 
   handlers:
     - name: Firewall reload
